--- a/3 - Domain/Domain/Domain.csproj
+++ b/3 - Domain/Domain/Domain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\5 - Entities\Entities\Entities.csproj" />
+    </ItemGroup>
+
 </Project>
