--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,26 @@
 ﻿services:
-  webapi:
-    image: webapi
+  news-api:
+    image: news-api
+    container_name: news-api
     build:
       context: .
       dockerfile: 1 - API/WebApi/Dockerfile
+
+  mssql202:
+    image: mcr.microsoft.com/mssql/server:2022-latest
+    container_name: mssql
+    environment:
+      SA_PASSWORD: "Password123"
+      ACCEPT_EULA: "Y"
+    ports:
+      - "1433:1433"
+    volumes:
+      - mssql-data:/var/opt/mssql
+    networks:
+      - news-network
+
+volumes:
+  mssql-data:
+
+networks:
+  news-network:
